[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/components/popups/SettingsPopup.gd" type="Script" id=1]
[ext_resource path="res://ui/theme/fonts/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme/button_outline_large_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/button_outline_large_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/theme/button_outline_large_accented.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=7]
[ext_resource path="res://ui/theme/button_outline_large_focus.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="SettingsPopup" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0392157, 0.129412, 0.627451 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -240.0
margin_right = 360.0
margin_bottom = 240.0
rect_min_size = Vector2( 720, 540 )
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_right = 720.0
margin_bottom = 540.0
custom_styles/panel = ExtResource( 5 )

[node name="Column" type="VBoxContainer" parent="PanelContainer"]
margin_right = 720.0
margin_bottom = 540.0
custom_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/Column"]
margin_right = 720.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
value = 100.0
percent_visible = false

[node name="Margin" type="MarginContainer" parent="PanelContainer/Column"]
margin_top = 16.0
margin_right = 720.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="Column" type="VBoxContainer" parent="PanelContainer/Column/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 504.0
custom_constants/separation = 12

[node name="Title" type="Label" parent="PanelContainer/Column/Margin/Column"]
margin_right = 680.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Configure the App"
align = 1

[node name="Separator" type="HSeparator" parent="PanelContainer/Column/Margin/Column"]
margin_left = 140.0
margin_top = 43.0
margin_right = 540.0
margin_bottom = 51.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4

[node name="Settings" type="VBoxContainer" parent="PanelContainer/Column/Margin/Column"]
margin_top = 63.0
margin_right = 680.0
margin_bottom = 372.0
size_flags_vertical = 3
custom_constants/separation = 32

[node name="LanguageSetting" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column/Settings"]
margin_right = 680.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="PanelContainer/Column/Margin/Column/Settings/LanguageSetting"]
margin_top = 9.0
margin_right = 332.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Language"

[node name="Value" type="OptionButton" parent="PanelContainer/Column/Margin/Column/Settings/LanguageSetting"]
margin_left = 348.0
margin_right = 680.0
margin_bottom = 47.0
hint_tooltip = "Change the course's language. We plan to add other languages, but only English is available for now."
size_flags_horizontal = 3
text = "English"

[node name="FontSizeSetting" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column/Settings"]
margin_top = 79.0
margin_right = 680.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="PanelContainer/Column/Margin/Column/Settings/FontSizeSetting"]
margin_right = 332.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Text Size"

[node name="ValueContainer" type="VBoxContainer" parent="PanelContainer/Column/Margin/Column/Settings/FontSizeSetting"]
margin_left = 348.0
margin_right = 680.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Value" type="HSlider" parent="PanelContainer/Column/Margin/Column/Settings/FontSizeSetting/ValueContainer"]
margin_right = 332.0
margin_bottom = 24.0
hint_tooltip = "Increase or lower the size of all text in the app."
size_flags_horizontal = 3
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 2.0
rounded = true
tick_count = 3
ticks_on_borders = true

[node name="SampleText" type="Label" parent="PanelContainer/Column/Margin/Column/Settings/FontSizeSetting/ValueContainer"]
margin_top = 36.0
margin_right = 332.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Sample text"
align = 1

[node name="ScrollSensitivitySetting" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column/Settings"]
margin_top = 187.0
margin_right = 680.0
margin_bottom = 215.0

[node name="Label" type="Label" parent="PanelContainer/Column/Margin/Column/Settings/ScrollSensitivitySetting"]
margin_right = 332.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Scroll sensitivity"

[node name="Value" type="HSlider" parent="PanelContainer/Column/Margin/Column/Settings/ScrollSensitivitySetting"]
margin_left = 348.0
margin_right = 680.0
margin_bottom = 24.0
hint_tooltip = "Increase or lower the scrolling speed with the mouse wheel or the touchpad."
size_flags_horizontal = 3
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 2.0
step = 0.1
value = 1.0
tick_count = 2
ticks_on_borders = true

[node name="FramerateSetting" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column/Settings"]
margin_top = 247.0
margin_right = 680.0
margin_bottom = 294.0

[node name="Label" type="Label" parent="PanelContainer/Column/Margin/Column/Settings/FramerateSetting"]
margin_right = 332.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Framerate cap"

[node name="Value" type="OptionButton" parent="PanelContainer/Column/Margin/Column/Settings/FramerateSetting"]
margin_left = 348.0
margin_right = 680.0
margin_bottom = 47.0
hint_tooltip = "Limit the app's framerate. Lower values make the app use less resources, especially when running in the browser, but may feel less fluid."
size_flags_horizontal = 3
text = "60 FPS"
items = [ "60 FPS", null, false, 0, false, "30 FPS", null, false, 0, false, "No limit", null, false, 0, false ]
selected = 0

[node name="Spacer" type="Control" parent="PanelContainer/Column/Margin/Column"]
margin_top = 384.0
margin_right = 680.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 20 )

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column"]
margin_top = 416.0
margin_right = 680.0
margin_bottom = 484.0
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/Column/Margin/Column/Buttons"]
margin_left = 132.0
margin_right = 332.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_colors/font_color = Color( 0.572549, 0.560784, 0.721569, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_colors/font_color_pressed = Color( 0.290196, 0.294118, 0.388235, 1 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 4 )
text = "Close"

[node name="ApplyButton" type="Button" parent="PanelContainer/Column/Margin/Column/Buttons"]
margin_left = 348.0
margin_right = 548.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0.239216, 1, 0.431373, 1 )
custom_colors/font_color = Color( 0.572549, 0.560784, 0.721569, 1 )
custom_colors/font_color_hover = Color( 0.239216, 1, 0.431373, 1 )
custom_colors/font_color_pressed = Color( 0.290196, 0.294118, 0.388235, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Apply"
